--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Package Application
       uses: JackMcKew/pyinstaller-action-windows@main
       with:
-        path: BeatSaberSniper.py
+        path: /
 
     - uses: actions/upload-artifact@v2
       with:
